
[project]
name = "boost"
description = "Optimising LLM proxy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi==0.111.0","uvicorn[standard]==0.30.6","requests==2.32.3","aiohttp==3.10.5","litellm==1.65.7","mcp==1.6.0","cachetools==5.5.2","asyncache==0.3.1","openai","websockets==15.0.1"]
version = "0.3.34"
