
[package]
name = "harbor-app"
version = "0.2.8"
description = "A companion app for Harbor LLM toolkit"
authors = ["av"]
edition = "2021"

[lib]
name = "harbor_lib"
crate-type = ["staticlib","cdylib","rlib"]

[build-dependencies.tauri-build]
version = "2.0.0-rc"
features = []

[dependencies]
tauri-plugin-shell = "2.0.0-rc"
serde_json = "1"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"

[dependencies.tauri]
version = "2.0.0-rc"
features = ["tray-icon"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-window-state = "2.0.0-rc"
