
[package]
name = "harbor-app"
version = "0.5.1"
description = "A companion app for Harbor LLM toolkit"
authors = ["av"]
edition = "2021"

[lib]
name = "harbor_lib"
crate-type = ["staticlib","cdylib","rlib"]

[build-dependencies.tauri-build]
version = "2.6"
features = []

[dependencies]
tauri-plugin-shell = "2.3"
serde_json = "1"
tauri-plugin-store = "2.4"
tauri-plugin-fs = "2.5"
tauri-plugin-os = "2.3"
tauri-plugin-pty = "0.2"
portable-pty = "0.9"

[dependencies.tauri]
version = "2.11"
features = ["protocol-asset","tray-icon"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.5"
tauri-plugin-single-instance = "2.4"
tauri-plugin-window-state = "2.4"
